--- a/core/app/views/gaku/students/show.html.slim
+++ b/core/app/views/gaku/students/show.html.slim
@@ -41,7 +41,7 @@
       #delete-student
         = link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
     .delete_modal
-      =render 'gaku/shared/delete_modal', :target => @student
+      =render 'delete_modal', :student => @student
 
 coffee:
   $('#delete-student-link').on 'click', (event) ->
