--- a/core/app/views/gaku/students/enrollment_statuses/_enrollment_status.html.slim
+++ b/core/app/views/gaku/students/enrollment_statuses/_enrollment_status.html.slim
@@ -1,4 +1,4 @@
 span#student-enrollment-status style='margin-right:3px'
   = @student.enrollment_status
-= link_to edit_button, [:edit_enrollment_status, @student], :class=> 'mr-xs btn btn-mini btn-warning edit-link' ,:id => 'edit-student-enrollment-status-link', :remote => true
+= link_to edit_button, [:edit_enrollment_status, @student], :class=> 'mr-xs btn btn-mini btn-warning' ,:id => 'edit-student-enrollment-status-link', :remote => true
 
