--- a/core/app/views/gaku/admin/disposals/student_addresses.html.slim
+++ b/core/app/views/gaku/admin/disposals/student_addresses.html.slim
@@ -12,4 +12,4 @@
         = th t(:'address.address2')
         = th_actions 3
     tbody
-      =render :partial => 'address', :collection => @student_addresses, :as => :student_address
+      =render :partial => 'address', :collection => @addresses, :as => :address
