--- a/core/app/views/gaku/students/addresses/_fields.html.slim
+++ b/core/app/views/gaku/students/addresses/_fields.html.slim
@@ -1,4 +1,4 @@
-= render 'gaku/shared/fields/address_primary_field', :address => address, :primary_address => @primary_address, :target => [@student, address]
+= render 'gaku/shared/fields/address_primary_field', :address => address, :target => [@student, address]
 = render 'gaku/shared/fields/address_fields', :address => address, :target => [@student, address]
 td
   = ajax_link_to_edit [:edit, @student, address]
