--- a/core/app/views/gaku/students/addresses/make_primary.js.erb
+++ b/core/app/views/gaku/students/addresses/make_primary.js.erb
@@ -2,6 +2,6 @@ $('#student-addresses-index tbody tr').each(function(){
   $(this).children('td.primary_address').find('a').removeClass('btn-primary')
 });
 
-$("#address-<%= @student_address.address.id %>").children('td.primary_address')
+$("#address-<%= @address.id %>").children('td.primary_address')
                                                 .find('a')
                                                 .addClass('btn-primary')
