--- a/core/app/views/gaku/students/addresses/soft_delete.js.erb
+++ b/core/app/views/gaku/students/addresses/soft_delete.js.erb
@@ -3,6 +3,6 @@ $(".student-addresses-count").html("<%= print_count(@count-1, t_address_list) %>
 
 showNotice("<%= render_flash %>");
 
-<%- unless @student.addresses.blank? %>
+<%- if @student.addresses.any? & @address.is_primary? %>
 	$('#address-<%= @student.addresses.first.id %> td a').addClass('btn-primary');
 <% end %>
