--- a/core/app/views/gaku/students/guardians/addresses/_address_fields.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_address_fields.html.slim
@@ -1,4 +1,4 @@
-= render 'gaku/shared/fields/address_primary_field', :address => address, :primary_address => @primary_address ,:target => [@student, @guardian, address]
+= render 'gaku/shared/fields/address_primary_field', :address => address, :target => [@student, @guardian, address]
 = render 'gaku/shared/fields/address_fields', :address => address, :target => [@student, @guardian, address]
 td
   = ajax_link_to_edit [:edit, @student, @guardian, address]
