--- a/admissions/app/views/gaku/admin/admissions/listing_applicants.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/listing_applicants.html.slim
@@ -1,6 +1,6 @@
 = content_for :title, t(:'admissions.applicants.list')
 .pull-right
-  = button t(:'admissions.go_to_admissions'), [:admin, :admissions], :id => 'dmin-admissions-link'
+  = button t(:'admissions.go_to_admissions'), [:admin, :admissions], :id => 'admin-admissions-link'
   = button t(:'admissions.go_to_listing'), [:listing_admissions, :admin, :admissions], :id => 'listing_admissions-admin-admissions-link'
 
 .row-fluid
