--- a/core/app/views/gaku/students/guardians/_guardians.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardians.html.slim
@@ -13,4 +13,4 @@
   = index_body do
     .row-fluid
       .span12.well.guardians_list
-        = render :partial => 'gaku/students/guardians/guardian', :collection => @student.guardians, :as => 'guardian'
+        = render :partial => 'gaku/students/guardians/guardian', :collection => @student.guardians, :as => :guardian
