--- a/core/app/views/gaku/students/guardians/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/students/guardians/contacts/_contacts.html.slim
@@ -6,7 +6,7 @@
         = print_count @guardian.contacts.count, t_contact_list
     .pull-right
       = ajax_link_to_new t(:'contact.add'), [:new, @student, @guardian, :contact], :id => 'new-student-guardian-contact-link'
-      
+
   = hr
 
   = index_body do
@@ -20,4 +20,4 @@
           = th t(:'contact.emergency')
           = th_actions 2
       tbody
-        = render :partial => 'gaku/students/guardians/contacts/contact', :collection => @guardian.contacts, :as => 'contact'
+        = render :partial => 'gaku/students/guardians/contacts/contact', :collection => @guardian.contacts, :as => :contact, :guardian => @guardian
