--- a/core/app/views/gaku/students/guardians/contacts/make_primary.js.erb
+++ b/core/app/views/gaku/students/guardians/contacts/make_primary.js.erb
@@ -1,9 +1,6 @@
-$('.guardian-contact').each(function() {
-	$(this).children('td.primary-contact').html('');
-	$(this).find('.primary-button a').removeClass('btn-primary');
+$('#student-guardian-contacts-index tbody tr').each(function(){
+  $(this).children('td.primary-contact').find('a').removeClass('btn-primary')
 });
-
-var currentContact = $("#contact-<%= @contact.id %>");
-currentContact.children('td.primary-contact').html('Primary');
-currentContact.find('.primary-button a').addClass('btn-primary');
-$('#primary-contact').html("<%= @contact.contact_type.name + ':' + @contact.data + '(' + @contact.details + ')' %>");
+$("#contact-<%= @contact.id %>").children('td.primary-contact')
+                                                .find('a')
+                                                .addClass('btn-primary')
