--- a/core/app/views/gaku/students/contacts/create.js.erb
+++ b/core/app/views/gaku/students/contacts/create.js.erb
@@ -4,3 +4,15 @@ $('#student-contacts-index tbody').append('<%= render_js_partial("contact", {:co
 $("#new-student-contact-link").show();
 $('#new-student-contact').slideToggle();
 showNotice("<%= render_flash %>");
+
+
+<%- if @contact.is_primary %>
+  $('#student-contacts-index tbody tr').each(function(){
+    $(this).children('td.primary-contact').find('a').removeClass('btn-primary')
+  });
+
+  $("#contact-<%= @contact.id %>").children('td.primary-contact')
+                                                .find('a')
+                                                .addClass('btn-primary')
+
+<% end %>
