--- a/core/app/views/gaku/students/guardians/contacts/update.js.erb
+++ b/core/app/views/gaku/students/guardians/contacts/update.js.erb
@@ -1,3 +1,13 @@
 $('#contact-<%= @contact.id %>').html('<%= render_js_partial("fields", {:contact => @contact}) %>');
 $(".modal#edit-contact-modal").modal("hide");
 showNotice("<%= render_flash %>");
+
+<% if @contact.is_primary? %>
+  $('#student-guardian-contacts-index tbody tr').each(function(){
+    $(this).children('td.primary-contact').find('a').removeClass('btn-primary')
+  });
+  $("#contact-<%= @contact.id %>").children('td.primary-contact')
+                                                .find('a')
+                                                .addClass('btn-primary')
+
+<% end %>
