--- a/core/app/views/gaku/admin/schools/campuses/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_contacts.html.slim
@@ -7,7 +7,7 @@
     .pull-right
         = ajax_link_to_new t(:'contact.add'), [:new, :admin, @campus.school, @campus, :contact], :id => 'new-admin-school-campus-contact-link'
   = hr
-  
+
   = index_body do
     = table_for 'admin-school-campus-contacts-index' do
       thead
@@ -19,4 +19,4 @@
           = th t(:'contact.emergency')
           = th_actions 2
       tbody
-        = render :partial => 'gaku/admin/schools/campuses/contacts/contact', :collection => @campus.contacts, :as => 'contact'
+        = render :partial => 'gaku/admin/schools/campuses/contacts/contact', :collection => @campus.contacts, :as => 'contact', :campus => @campus, :school => @school
