--- a/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
@@ -1,25 +1,18 @@
-<%- if @contact.errors.any? %>
-	$('#new-admin-school-campus-contact-form-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @contact}) %>');
-<%- else %>
-  $('.admin-school-campus-contacts-count').html('<%= print_count(@count+1, t_contact_list) %>');
 
-  $('#admin-school-campus-contacts-index tbody').append('<%= render_js_partial("contact", {:contact => @contact}) %>');
+$('.admin-school-campus-contacts-count').html('<%= print_count(@count+1, t_contact_list) %>');
+$('#admin-school-campus-contacts-index tbody').append('<%= render_js_partial("contact", {:contact => @contact, :school => @school, :campus => @campus}) %>');
 
-	$("#new-admin-school-campus-contact-link").show();
-	$('#new-admin-school-campus-contact').slideToggle();
-	$("#new-admin-school-campus-contact form")[0].reset();
-	$('#new-admin-school-campus-contact-form-errors').slideToggle();
+$("#new-admin-school-campus-contact-link").show();
+$('#new-admin-school-campus-contact').slideToggle();
 
-	showNotice("<%= render_flash %>")
+showNotice("<%= render_flash %>")
 
-	<%- if @contact.is_primary? %>
-		$('.campus-contact').each(function() {
-			$(this).children('td.primary-contact').html('');
-			$(this).find('.primary-button a').removeClass('btn-primary');
-		});
+<%- if @contact.is_primary? %>
+	$('#admin-school-campus-contacts-index tbody tr').each(function(){
+    $(this).children('td.primary-contact').find('a').removeClass('btn-primary')
+  });
 
-		var currentContact = $("#contact-<%= @contact.id %>");
-		currentContact.children('td.primary-contact').html('Primary');
-		currentContact.find('.primary-button a').addClass('btn-primary');
-	<% end %>
+  $("#contact-<%= @contact.id %>").children('td.primary-contact')
+                                                .find('a')
+                                                .addClass('btn-primary')
 <% end %>
