--- a/core/app/views/gaku/admin/schools/campuses/contacts/destroy.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/destroy.js.erb
@@ -1,5 +1,6 @@
-<%-if @campus.contacts.any? %>
-	$('#admin-school-campus-contacts-index').find('#contact-<%= @campus.contacts.first.id %> .make-primary').addClass('btn-primary');
+<%- if @campus.contacts.any? & @contact.is_primary? %>
+  $('#contact-<%= @campus.contacts.first.id %> td.primary-contact a').addClass('btn-primary');
 <% end %>
+
 $('.admin-school-campus-contacts-count').html('<%= print_count(@count-1, t_contact_list) %>');
 showNotice("<%= render_flash %>");
