--- a/core/app/views/gaku/admin/schools/campuses/contacts/update.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/update.js.erb
@@ -1,12 +1,13 @@
-$('#admin-school-campus-contacts-index tbody').html('<%= escape_javascript(render :partial => "contact", :formats => [:html], :handlers => [:erb, :slim], :collection => @contacts, :as => :contact) %>');
+$('#contact-<%= @contact.id %>').html('<%= render_js_partial("fields", {:contact => @contact, :school => @school, :campus => @campus}) %>');
 $(".modal#edit-contact-modal").modal("hide");
 showNotice("<%= render_flash %>");
 
-$('.campus-contact').each(function() {
-	$(this).children('td.primary-contact').html('');
-	$(this).find('.primary-button a').removeClass('btn-primary');
-});
+<%- if @contact.is_primary? %>
+  $('#admin-school-campus-contacts-index tbody tr').each(function(){
+    $(this).children('td.primary-contact').find('a').removeClass('btn-primary')
+  });
 
-var currentContact = $("#contact-<%= @contact.id %>");
-currentContact.children('td.primary-contact').html('Primary');
-currentContact.find('.primary-button a').addClass('btn-primary');
+  $("#contact-<%= @contact.id %>").children('td.primary-contact')
+                                                .find('a')
+                                                .addClass('btn-primary')
+<% end %>
