locale updates/fixes

--- a/core/app/views/gaku/shared/fields/_contact_fields.html.slim
+++ b/core/app/views/gaku/shared/fields/_contact_fields.html.slim
@@ -2,4 +2,4 @@ td=target.last.contact_type.name if target.last.contact_type
 td=target.last.data
 td=target.last.details
 td
-  =t(:emergency) if target.last.is_emergency?
+  =t(:'contact.emergency') if target.last.is_emergency?
