[js] remove unnecessery js from campus create.js.erb

--- a/core/app/views/gaku/admin/schools/campuses/addresses/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/create.js.erb
@@ -2,6 +2,6 @@ $('#admin-school-campus-addresses-index tbody').append('<%= render_js_partial("a
 
 $('#new-admin-school-campus-address-link').hide()
 $('#new-admin-school-campus-address').slideToggle();
-$('#new-admin-school-campus-address form')[0].reset();
+// $('#new-admin-school-campus-address form')[0].reset();
 
 showNotice("<%= render_flash %>")
