--- a/admissions/app/views/gaku/admin/admissions/_admission.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_admission.html.slim
@@ -1,4 +1,4 @@
-tr id="admission-#{admission.id}" style="#{ (admission.student.enrollment_status_id == 17) ? "color: grey;" : "" }"
+tr id="admission-#{admission.id}" style="#{ (admission.student.enrollment_status.code == "deleted") ? "color: grey;" : "" }"
   = render 'gaku/admin/admissions/admission_fields', :admission => admission
   td.manage
   
