[fix/spec] addresses specs

--- a/core/app/views/gaku/shared/fields/_address_primary_field.html.slim
+++ b/core/app/views/gaku/shared/fields/_address_primary_field.html.slim
@@ -1,5 +1,5 @@
 td class='primary_address'
   -if address.is_primary?
-    = link_to ok_icon, [:make_primary] + target, :remote => true, :class => 'span12 btn btn-mini btn-primary make-primary-address', :method => :post,:confirm => t('confirm')
+    = link_to ok_icon, [:make_primary] + target, :remote => true, :class => 'span12 btn btn-mini btn-primary make-primary-address', :method => :post,:confirm => t('confirm'), :id => 'set_primary_link'
   -else
     = link_to ok_icon, [:make_primary] + target, :remote => true, :id => 'set_primary_link', :class => 'span12 btn btn-mini make-primary-address', :method => :post, :confirm => t('confirm')
