clean admission students views

--- a/admissions/app/views/gaku/admin/students/show.html.slim
+++ b/admissions/app/views/gaku/admin/students/show.html.slim
@@ -17,7 +17,7 @@
       .row-fluid.mt-s
         = button_to t(:'pictures.change'), 'JavaScript:void(0);', :method => :get, :id => "upload-student-picture-link", :class => "span12 btn"
         #upload-student-picture.hide
-          = render 'upload_picture'
+          = render 'gaku/students/upload_picture'
 
   = well_div do
     = render :partial => 'gaku/students/contacts/contacts'
@@ -32,16 +32,14 @@
     /.span4
       = link_to t(:'enroll_to_class'), [:new, @student, :class_group_enrollment], { :id => 'enroll-student-link', :class => "span12 btn btn-primary", :remote => true }
     .span4
-      = link_to_edit_with_text [:edit, @student], :class => "span12 btn btn-warning edit-link", :remote => true
+      = link_to_edit_with_text [:edit, :admin, admission.student], :class => "span12 btn btn-warning edit-link", :remote => true
     .span4
-      = link_to_back students_path, :class => "span12 btn"
+      = link_to_back [:listing_admissions, :admin, :admissions], :class => "span12 btn"
 
   row-fluid
     .span12
       #delete-student
-        = link_to_modal_delete nil, :id => 'delete-student-link', :class => 'btn btn-danger pull-right', :data => {:confirm => nil}
-    .delete_modal
-      =render 'delete_modal', :student => @student
+        
 
 coffee:
   $('#delete-student-link').on 'click', (event) ->
