--- a/core/app/views/gaku/course_groups/_delete_confirm.html.slim
+++ b/core/app/views/gaku/course_groups/_delete_confirm.html.slim
@@ -1,7 +1,7 @@
 row-fluid
   .span12
     #course-group-delete
-      = ajax_soft_delete :id => 'delete-course-group-link'
+      = link_to_modal_delete @course_group,:id => 'delete-course-group-link'
   .delete-modal
     =render 'gaku/shared/delete_modal', :target => [:soft_delete, @course_group]
 
