--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -40,4 +40,11 @@
             - if student.commute_method
               = render 'gaku/students/commute_methods/commute_method', :student => student
             - else
-              = ajax_link_to_new t(:add), [:new, student, :commute_method], :id => 'new-student-commute-method-link'
+              = ajax_link_to_new t(:add), [:new, student, :commute_method], :id => 'new-student-commute-method-link', :class => 'btn btn-primary mr-s btn-mini'
+      tr
+        th.btn-c2 = t('specialty.singular')
+        td
+          - if !student.specialties
+            = render 'gaku/students/student_specialties/student_specialty', :student => student
+          -else
+            = link_to t(:manage), [student, :student_specialties], :remote => true, :id => 'new-student-commute-method-link', :class => 'btn btn-primary mr-s btn-mini'
