--- a/core/app/views/gaku/students/commute_methods/_modal.html.slim
+++ b/core/app/views/gaku/students/commute_methods/_modal.html.slim
@@ -1,5 +1,5 @@
 = modal_for 'student-commute-method-modal' do
-  = modal_form_for [@student, @commute_method] do |f|
+  = modal_form_for [student, @commute_method] do |f|
     = modal_body do
       = f.select :commute_method_type_id, commute_method_types, :prompt => t('default')
       = buttons_for @commute_method, :nested_id => 'student-commute-method', :label => t(:'commute_method.add')
