--- a/core/app/views/gaku/students/commute_methods/_commute_method.html.slim
+++ b/core/app/views/gaku/students/commute_methods/_commute_method.html.slim
@@ -1,3 +1,5 @@
 span#commute-method style='margin-right:3px'
-  = student.commute_method.commute_method_type.name.capitalize
-= link_to_edit [:edit, student, student.commute_method], :remote => true, :id => 'edit-student-commute-method-link'
+  = student.commute_method
+= link_to edit_button, [:edit, student, student.commute_method], :class=> 'mr-xs btn btn-mini btn-warning', :remote => true, :id => 'edit-student-commute-method-link'
+
+= render 'gaku/students/commute_methods/modal', :student => student
