--- a/core/app/views/gaku/students/student_specialties/new.js.erb
+++ b/core/app/views/gaku/students/student_specialties/new.js.erb
@@ -1,1 +1,3 @@
-alert('hello')
+$('#new-student-specialty').html('<%= render_js_partial("form") %>').slideDown();
+$('.remote-form').enableValidations();
+$('#new-student-specialty-link').hide();
