--- a/core/app/views/gaku/students/student_specialties/_edit.html.slim
+++ b/core/app/views/gaku/students/student_specialties/_edit.html.slim
@@ -2,6 +2,7 @@
 = modal_body do
   = remote_form_for [@student, @student_specialty] do |f|
     = f.select :specialty_id, specialties, { :prompt => t(:'specialty.choose')}, :label => t(:'specialty.plural')
+    = f.check_box :is_major, :label => t(:'specialty.major')
     .row-fluid
       .span12
         =submit_button t(:'student_specialty.save') , :id => "submit-student-specualty-button"
