--- a/core/app/views/gaku/students/student_specialties/_form.html.slim
+++ b/core/app/views/gaku/students/student_specialties/_form.html.slim
@@ -1,5 +1,6 @@
 = remote_form_for [@student, @student_specialty] do |f|
   = f.select :specialty_id, specialties, { :prompt => t(:'specialty.choose')}, :label => t(:'specialty.plural')
+  = f.check_box :is_major, :label => t(:'specialty.major')
   .row-fluid
     .span12
       =submit_button t(:'student_specialty.save') , :id => "submit-student-specualty-button"
