--- a/core/app/views/gaku/students/student_specialties/_student_specialties.html.slim
+++ b/core/app/views/gaku/students/student_specialties/_student_specialties.html.slim
@@ -1,3 +1,3 @@
 span#student-specialty-list
   = student_specialties_list(@student.student_specialties)
-= link_to edit_button, [student, :student_specialties], :remote => true, :id => 'new-student-commute-method-link', :class => 'btn mr-s btn-mini btn-warning'
+= ajax_link_to_edit [student, :student_specialties], :id => 'new-student-specialty-link'
