[fix] commute method for students#show

--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -38,7 +38,7 @@
         th.btn-c2 = t('commute_method.singular')
         td
           #student-commute-method
-            /= render 'gaku/students/commute_methods/commute_method', :student => student
+            = render 'gaku/students/commute_methods/commute_method', :student => student
 
       tr
         th.btn-c2 = t('specialty.singular')
