--- a/core/app/views/gaku/students/commute_methods/_modal.html.slim
+++ b/core/app/views/gaku/students/commute_methods/_modal.html.slim
@@ -1,4 +1,5 @@
 = modal_for 'student-commute-method-modal' do
+  = modal_header t(:'commute_method.edit')
   = modal_form_for [student, @commute_method] do |f|
     = modal_body do
       = f.select :commute_method_type_id, commute_method_types, :prompt => t('default')
