--- a/core/app/views/gaku/students/commute_methods/new.js.erb
+++ b/core/app/views/gaku/students/commute_methods/new.js.erb
@@ -1,4 +1,4 @@
-$('#modal-dialogs').html('<%= render_js_partial("gaku/students/commute_methods/modal") %>');
+$('#modal-dialogs').html('<%= render_js_partial("gaku/students/commute_methods/modal", :student => @student) %>');
 $('#student-commute-method-modal').modal('show');
 $('#new-student-commute-method-link').hide();
 $('.remote-form').enableValidations();
