fixing admissions specs

--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -1,7 +1,7 @@
 td.surname = student.surname
 td.name = student.name
 td.birth = student.birth_date
-td.gender = student.gender.nil? ? '' : (student.gender ? t('male') : t('female'))
+td.gender = student.gender.nil? ? '' : (student.gender ? t(:'gender.male') : t(:'gender.female'))
 // TODO: move this to helper
 - if !phase.exam.nil?
   td.exam-score = !@students.select{|f| f[:student] == student}[0].nil? ? @students.select{|f| f[:student] == student}[0][:exam_score] : t(:'exams.not_graded')
