[ajax] student achievements add/delete/edit form students#show

--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -50,4 +50,9 @@
         td
           #student-simple-grade
             = render 'gaku/students/simple_grades/simple_grades', :student => student
+      tr
+        th.btn-c2 = t('achievement.singular')
+        td
+          #student-achievement
+            = render 'gaku/students/student_achievements/student_achievements', :student => student
 
