[admissions] add parameters on period/method change

--- a/admissions/app/views/gaku/admin/admissions/_method.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_method.html.slim
@@ -6,3 +6,10 @@
     = t(:'admission_methods.no_method')
 - else
   = t(:'admission_methods.no_period')
+
+
+javascript:
+
+  $('#admission_method').on('change', function(){
+    history.pushState(null, document.title, '?admission_period='+$('#admission_period').val()+'&admission_method='+$(this).val());
+  });
