--- a/core/app/views/gaku/admin/achievements/new.js.erb
+++ b/core/app/views/gaku/admin/achievements/new.js.erb
@@ -1,3 +1,3 @@
 $('#new-admin-achievement').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-admin-achievement-link').hide();
-$('.remote-form').enableValidations();
+$('.normal-form').enableValidations();
