--- a/admissions/app/views/gaku/admin/admissions/importer/_importer_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/importer/_importer_modal.html.slim
@@ -8,6 +8,9 @@
         .row-fluid
           .span12
             = form_for :importer, :url => { :action => "import_sheet" }, :html => { :multipart => true } do |f|
+              = hidden_field_tag "admission_period_id", params[:admission_period_id]
+              = hidden_field_tag "admission_method_id", params[:admission_method_id]
+
               label for="importer"
               = t(:'import_format')
               = select("importer", "importer_type", @importer_types, {:include_blank => false})
