adding applicant number v1

--- a/admissions/app/views/gaku/admin/admission_methods/_form_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/_form_fields.html.slim
@@ -1,1 +1,2 @@
 = f.text_field :name, :label => t(:'admission_methods.name')
+= f.number_field :starting_applicant_number, :label => t(:'admission_methods.starting_applicant_number')
