--- a/admissions/app/views/gaku/admin/admissions/_period.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_period.html.slim
@@ -1,11 +1,11 @@
 - if !admission_period.nil?
   = form_tag change_admission_period_admin_admissions_path, :remote => true, :id => "change-admission-period-form" do
-    = select_tag :admission_period, options_from_collection_for_select(@admission_periods, 'id', 'name', admission_period.id), :onchange => "$('#change-admission-period-form').submit()", :class => "span12"
+    = select_tag :admission_period_id, options_from_collection_for_select(@admission_periods, 'id', 'name', admission_period.id), :onchange => "$('#change-admission-period-form').submit()", :class => "span12"
 - else
   = t(:'admission_periods.no_period')
 
 javascript:
 
-  $('#admission_period').on('change', function(){
-    history.pushState(null, document.title, '?admission_period='+$(this).val());
+  $('#admission_period_id').on('change', function(){
+    history.pushState(null, document.title, '?admission_period_id='+$(this).val());
   });
