--- a/admissions/app/views/gaku/admin/admissions/_student.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student.html.slim
@@ -10,11 +10,11 @@ tr id="student-#{student.id}" style="#{ (student.enrollment_status.code == "dele
           = hidden_field_tag :student_id, student.id
           = hidden_field_tag :admission_period_id, @admission_period.id
           = hidden_field_tag :admission_method_id, @admission_method.id
-          = submit_tag "Save"
+          = submit_tag t("save")
         //= state.admission_phase.admission_phase_states.count
         - if state.can_admit
           = form_tag admit_student_admin_admissions_path, :remote => true, :id => "admit-student-form" do
             = hidden_field_tag :student_id, student.id
             = hidden_field_tag :admission_period_id, @admission_period.id
             = hidden_field_tag :admission_method_id, @admission_method.id
-            = submit_tag "Admit"
+            = submit_tag t("admissions.admit")
