Fix Admissions index add 受験番号 出身中学校 希望学科

--- a/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
@@ -1,6 +1,9 @@
 = table_for 'students-index' do
   thead
     tr
+      = th "受験番号"
+      = th "出身中学校"
+      = th "希望学科"
       = th t(:'surname')
       = th t(:'name')
       = th t(:'birth')
