--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -1,3 +1,6 @@
+td.applicant_number = student.admission.applicant_number
+td.school_history = student.admission.school_history
+td.specialty_applications = student.admission.specialty_applications
 td.surname = student.surname
 td.name = student.name
 td.birth = student.birth_date
