--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -1,5 +1,5 @@
 td.applicant_number = student.admission.applicant_number
-td.school_history = student.simple_grades
+td.school_name = "中学校名"
 td.specialty_applications = student.admission.specialty_applications
 td.surname = student.surname
 td.name = student.name
