--- a/admissions/app/views/gaku/admin/admissions/change_admission_method.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/change_admission_method.js.erb
@@ -1,2 +1,3 @@
 $('#admission-phases').html('<%= render_js_partial("phases", {:admission_method => @admission_method}) %>');
 $('#new-admin-admission-link').html('<%= render_js_partial("links", {:admission_method => @admission_method}) %>');
+$('#admissions_links').html('<%= render_js_partial("admissions_links", {:admission_params => @admission_params}) %>')
