--- a/admissions/app/views/gaku/admin/admissions/listing_admissions.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/listing_admissions.html.slim
@@ -1,7 +1,7 @@
 - content_for :title, t(:'admissions.candidates.list')
 .pull-right
-  = button t(:'admissions.go_to_admissions'), [:admin, :admissions], :id => 'admin-admissions-link'
-  = button t(:'admissions.go_to_applicants'), [:listing_applicants, :admin, :admissions], :id => 'listing_applicants-admin-admissions-link'
+  #admissions_links
+    = render 'gaku/admin/admissions/admissions_links', :admission_params => @admission_params
 .row-fluid
   h4.mt-xs.mb-0 = t(:'admissions.candidates.list')
 .row-fluid
