[admissions] change state logic refactoring

--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -1,3 +1,7 @@
+- if !(student.enrollment_status.code == "deleted") || (student.admission.admitted == true)
+  td.vm-tc = check_box_tag "student_ids[]", student.id, false, :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
+- else
+  td
 td.surname = student.surname
 td.name = student.name
 td.birth = student.birth_date
