[fixes] css classes and id for gaku naming convention

--- a/core/app/views/gaku/students/student_specialties/create.js.erb
+++ b/core/app/views/gaku/students/student_specialties/create.js.erb
@@ -1,5 +1,5 @@
 $('#index-student-specialties tbody').append('<%= render_js_partial("student_specialty", {:student_specialty => @student_specialty}) %>');
-$('.student-specialty-count').html('<%= print_count(@count+1, t_specialty_list) %>');
+$('.student-specialties-count').html('<%= print_count(@count+1, t_specialty_list) %>');
 $('#student-specialty-list').html('<%= student_specialties_list(@student.student_specialties) %>')
 
 
