--- a/core/app/views/gaku/students/student_specialties/destroy.js.erb
+++ b/core/app/views/gaku/students/student_specialties/destroy.js.erb
@@ -1,4 +1,4 @@
-$('.student-specialty-count').html('<%= print_count(@count-1, t_specialty_list) %>');
+$('.student-specialties-count').html('<%= print_count(@count-1, t_specialty_list) %>');
 $('#student-specialty-list').html('<%= student_specialties_list(@student.student_specialties) %>')
 showNotice("<%= render_flash %>");
 
